# pyplanet-cup_manager

./: .gitignore  pyproject.toml  readme.md  test.py  usage.md
cup_manager/: __init__.py  active.py  app.py  app_types.py  cup.py  models.py  payouts.py  results.py  setup.py  views.py
cup_manager/migrations/: 001_clean_table_names.py  002_add_map_medals.py  004_add_score_match.py
cup_manager/models/: __init__.py  cup_model.py  match_info.py  player_score.py  team_score.py
cup_manager/score_mode/: __init__.py  mode_logic.py  mode_logic_singular.py  score_base.py  score_cup.py  score_fallback.py  score_laps.py  score_mixed.py  score_mode_base.py  score_rounds.py  score_timeattack.py
cup_manager/score_mode/tests/: score_fallback_test.py  score_laps_test.py  score_mixed_test.py  score_mode_base_test.py  score_rounds_test.py  score_timeattack_test.py
cup_manager/templates/: options.xml  presets.xml  textbox.Script.txt  textbox.xml
cup_manager/utils/: country_codes.py  markdown.py  placements.py
cup_manager/views/: __init__.py  cup_view.py  match_history_view.py  matches_view.py  options_view.py  presets_view.py  results_view.py  single_instance_view.py  textbox_view.py
settings/: cup_manager_config.json  local.py
skybaks/cup_manager/: __init__.py  active.py  app.py  app_types.py  config.py  payouts.py  results.py  setup.py
skybaks/cup_manager/migrations/: 000_add_cup_host.py  001_clean_table_names.py  002_add_map_medals.py  003_add_scoremode.py
skybaks/cup_manager/models/: __init__.py  cup_model.py  match_info.py  player_score.py  team_score.py
skybaks/cup_manager/score_mode/: __init__.py  mode_logic.py  mode_logic_singular.py  score_base.py  score_fallback.py  score_laps.py  score_mixed.py  score_rounds.py  score_timeattack.py
skybaks/cup_manager/templates/: config.Script.txt  config.xml  config_data.xml  fileedit.xml  icons.xml  options.xml  textbox.Script.txt  textbox.xml
skybaks/cup_manager/test/: config_test.py
skybaks/cup_manager/utils/: country_codes.py  markdown.py  placements.py  validation.py
(+15 files in other folders)
